lib/nails_derive/tests/ui/from-request-position-field-queries.stderr
error: Specify name with #[nails(query = "")]
 --> $DIR/from-request-position-field-queries.rs:6:13
  |
6 |     #[nails(query)]
  |             ^^^^^
